--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^2.9.0",
     "next": "^9.5.5",
     "react": "^16.14.0",
     "react-dom": "^16.14.0"
   },
   "devDependencies": {
+    "@prisma/cli": "^2.9.0",
     "@types/node": "^14.11.8",
     "@types/react": "^16.9.52",
+    "react-query": "^2.23.1",
+    "react-query-devtools": "^2.6.0",
     "typescript": "^4.0.3"
   }
 }
